agent9527-rs/tui/src/bottom_pane/snapshots/agent9527_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_quit.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Agent9527 to do anything                                                                      "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ctrl + c again to quit                                                                            "
